project/SeedFill_1.0/SeedFill_1.0/seedfill/solution1/csim/report/_csim.log
INFO: [SIM 2] *************** CSIM start ***************
INFO: [SIM 4] CSIM will launch GCC as the compiler.
   Compiling ../../../../image_core.cpp in debug mode
csim.mk:83: recipe for target 'obj/image_core.o' failed
In file included from E:/Xilinx/Vivado/2018.2/include/floating_point_v7_0_bitacc_cmodel.h:143:0,
                 from E:/Xilinx/Vivado/2018.2/include/hls_fpo.h:166,
                 from E:/Xilinx/Vivado/2018.2/include/hls_half.h:58,
                 from E:/Xilinx/Vivado/2018.2/include/ap_int_sim.h:73,
                 from E:/Xilinx/Vivado/2018.2/include/ap_int.h:65,
                 from E:/Xilinx/Vivado/2018.2/include/ap_axi_sdata.h:86,
                 from E:/Xilinx/Vivado/2018.2/include/hls/hls_axi_io.h:39,
                 from E:/Xilinx/Vivado/2018.2/include/hls_video.h:48,
                 from ../../../../image_core.h:4,
                 from ../../../../image_core.cpp:1:
E:/Xilinx/Vivado/2018.2/include/gmp.h:62:0: warning: "__GMP_LIBGMP_DLL" redefined
 #define __GMP_LIBGMP_DLL  0
 
In file included from E:/Xilinx/Vivado/2018.2/include/hls_fpo.h:166:0,
                 from E:/Xilinx/Vivado/2018.2/include/hls_half.h:58,
                 from E:/Xilinx/Vivado/2018.2/include/ap_int_sim.h:73,
                 from E:/Xilinx/Vivado/2018.2/include/ap_int.h:65,
                 from E:/Xilinx/Vivado/2018.2/include/ap_axi_sdata.h:86,
                 from E:/Xilinx/Vivado/2018.2/include/hls/hls_axi_io.h:39,
                 from E:/Xilinx/Vivado/2018.2/include/hls_video.h:48,
                 from ../../../../image_core.h:4,
                 from ../../../../image_core.cpp:1:
E:/Xilinx/Vivado/2018.2/include/floating_point_v7_0_bitacc_cmodel.h:135:0: note: this is the location of the previous definition
 #define __GMP_LIBGMP_DLL 1
 
../../../../image_core.cpp:16:1: error: expected '}' at end of input
 }
 ^
make: *** [obj/image_core.o] Error 1
ERR: [SIM 100] 'csim_design' failed: compilation error(s).
INFO: [SIM 3] *************** CSIM finish ***************
